[tool.poetry]
name = "heart-disease-prediction"
version = "0.1.0"
description = ""
authors = ["Pratik Gorade <pratikgorade0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
Flask = "^2.0.0"
Flask-SQLAlchemy = "^2.5.1"
python-decouple = "^3.4"
gunicorn = "^20.1.0"
WTForms = "^2.3.3"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.14.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
autoflake = "^1.4"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
